--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
         margin: 0;
         padding: 0;
       }
+      a{
+        text-decoration: none;
+      }
+      a:hover{
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
